Update: Added additional util.uri package